
[28/01/2022] - 5.0.42 - Simone Pelaia
DeleteAll su IEnumerable
Rinominati metodi Lazy
Aggiunto LazySet per setters

[24/02/2022] - 5.0.44 - Simone Pelaia
Aggiunti metodi base di Save e Delete sul BusinessObject con possibilità di overridare dei metodi protetti da eseguire prima o dopo entrambe le operazioni

[07/03/2022] - 5.0.45 - Simone Pelaia
Aggiunta possibilità di resettare dall'esterno tutte le proprietà Lazy di un businessobject

[08/03/2022] - 5.0.46 - Simone Pelaia
Aggiunta possibilità di copiare valori di un dataobject su un qualsiasi oggetto

[17/06/2022] - 5.0.47 - Simone Pelaia
Operator In con ienumerable
Possibilità di specificare un nome colonna con notazioni speciali DB (e. [Colname] per SQL Server o `Colname` per MySql )
LoopMT con gestione automatica dei thread
CreateList(page, offset)
CacheResult senza limitazioni

[17/10/2022] - 5.0.48 - Simone Pelaia
Rimosso event manager 
Fix sulle cache
Semplificata gestione interna proprietà mappate
Fix SimpleAES

[17/10/2022] - 5.0.50 - Simone Pelaia
Fix ExtraData

[16/12/2022] - 5.0.52 - Simone Pelaia
Centralizzazione cache statiche su slot

[21/12/2022] - 5.0.53 - Simone Pelaia
Esposto esito ultimo salvataggio come proprietà dello slot

[09/01/2023] - 5.0.54 - Simone Pelaia
Scansione assembly solo per tipi pubblici (GetExportedTypes())

[15/01/2023] - 5.0.55 - Simone Pelaia
Scansione assembly solo per tipi pubblici anche per biz objects (GetExportedTypes())

[15/01/2023] - 5.0.56 - Simone Pelaia
Metodo slot Undelete per ripristinare gli oggetti cancellati logicamente

[22/03/2023] - 5.0.57 - Simone Pelaia
Modifica alle classi messaggio per renderle serializzabili + facilmente

[02/05/2023] - 5.0.59 - Simone Pelaia
Motore gestione storicizzazione

[14/09/2023] - 5.0.60 - Simone Pelaia
Introduzione motore db Micorsoft.Data
Pulizia classi db

[19/09/2023] - 5.0.61 - Simone Pelaia
Fix bug command type

[25/01/2024] - 5.0.62 - Simone Pelaia
Fix bug su proprietà LoadOnAccess in inserimento