@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>5.0.62</Version>
+    <Version>5.0.63</Version>
     <Authors>Simone Pelaia</Authors>
     <Copyright>Simone Pelaia</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
